# simple-docker-images

./: build.sh  build_all.sh  pyproject.toml  readme.md
debug-router/: Dockerfile  main.rhai  router.yml
dind-atlas/: Dockerfile
dropbox-download/: main.py
dropbox-heartbeat/: Dockerfile  main.py
dropbox-upload/: Dockerfile  main.py
dropbox-upload-rs/: Cargo.toml  Dockerfile  README.md
dropbox-upload-rs/src/: main.rs
easy-llm-cli/: Dockerfile
envsubst/: Dockerfile
gemini-cli/: Dockerfile
gpg-encrypt-asym/: Dockerfile  encrypt.sh
gpg-encrypt-sym/: Dockerfile  decrypt.sh  encrypt.sh
gql-schema-dumper/: .gitignore  Dockerfile  main.py  pyproject.toml
heart-beater-rust/: .gitignore  Cargo.toml  Dockerfile  README.md
heart-beater-rust/src/: cli.rs  config.rs  http.rs  lib.rs  main.rs  s3.rs
http-cmd-executor/: Cargo.toml  Dockerfile
http-cmd-executor/src/: main.rs
http-debugger/: Cargo.toml  Dockerfile  readme.md
http-debugger/src/: app.rs  cache.rs  cert_manager.rs  lib.rs  main.rs  proxy.rs  tls_stream.rs
http-echo-logger/: Dockerfile  entrypoint.sh
musl/: Dockerfile  README.md  build.sh
node-pnpm/: Dockerfile
node-watchfiles/: Dockerfile
rover-supergraph-compose/: Dockerfile  main.py
rust-dev/: Dockerfile  entrypoint.sh
s3-download-latest/: Dockerfile  main.py
s3-download-to-tar/: Dockerfile  main.py
s3-heartbeat/: Dockerfile  main.py
src/simple_docker_images/: __init__.py
ssh-client/: Dockerfile  entrypoint.sh  readme.md
ssh-forward/: Dockerfile  entrypoint.sh  healthcheck.sh  readme.md
ssh-rev/: Dockerfile  entrypoint.sh  healthcheck.sh  readme.md
tcp-logger/: Cargo.toml  Dockerfile  README.md
tcp-logger/src/: main.rs  tee_reader.rs
upx/: .gitignore  Dockerfile
