[tool.poetry]
name = "simple-docker-images"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "simple_docker_images"}]

[tool.poetry.dependencies]
python = "^3.10"
dropbox = "^11.35.0"
boto3 = "^1.24.89"
pyyaml = "^6.0"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"
radon = "^5.1.0"
pyproject-flake8 = "^5.0.4.post1"
mypy = "^0.990"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
