[project]
name = "simple-docker-images"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shogo Sawai", email = "shogo.sawai@gmail.com" }
]
dependencies = [
    "dropbox>=11.36.2",
    "boto3>=1.28.36",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "setuptools>=68.1.2",
]
readme = "readme.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
