[package]
name = "dropbox-upload-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
chrono = "0.4.38"
chrono-tz = "0.10.0"
clap = { version = "4.5.20", features = ["derive"] }
dropbox-sdk = { version = "0.18.1", default-features = false, features = ["dbx_files", "default_client"] }
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
