[package]
name = "heart-beater-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde-yaml = { git = "https://github.com/s1s5/serde-yaml" }
serde = { version = "^1", features = ["derive"] }
anyhow = "1.0.86"
aws-config = { version = "^1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "^1"
env_logger = "0.11.5"
log = "0.4.22"
clap = { version = "4.5.16", features = ["derive", "env"] }
tokio = { version = "1.40.0", features = ["full"] }
reqwest = "0.12.8"
tokio-cron-scheduler = { version = "0.13.0", features = ["signal"] }
uuid = "1.11.0"
chrono = "0.4.38"
parse-size = "1.1.0"
parse_duration = "2.1.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
