[package]
name = "http-cmd-executor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["rt", "macros", "signal", "fs"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.16.0", features = ["v4"] }
zip = "2.6.1"
