[package]
name = "tcp-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
futures = "0.3.28"
tokio = { version = "1.29.1", features = [
    "io-util",
    "net",
    "macros",
    "rt-multi-thread",
] }
